# ToDo_LLM_App

./: .env.example  .gitignore  DockerUsageGuide.md  README.md  compose.override.yml  compose.prod.yml  compose.yml  original_dck_cmps.yml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/api/: ai.py  router.py  tags.py  tasks.py
backend/app/config/: config.py
backend/app/db/: database.py
backend/app/schemas/: link.py  task.py  task_tag.py
backend/app/services/: ai_service.py  tag_service.py  task_service.py
backend/data/: README.md
backend/test/: conftest.py  test.db
backend/test/test_api/: test_ai.py  test_task_tag.py
docker/backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod
docker/frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod
frontend/: .env.example  .gitignore  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: aiApi.ts  client.ts  tagsApi.ts  tasksApi.ts
frontend/src/components/common/: Button.tsx  Input.tsx  Loading.tsx  Modal.tsx  Textarea.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/tags/: TagCard.tsx  TagForm.tsx  TagList.tsx  TagSelector.tsx
frontend/src/components/tasks/: TaskCard.tsx  TaskFilters.tsx  (+2 more)
frontend/src/hooks/: useAI.ts  usePagination.ts  useTags.ts  useTasks.ts
frontend/src/pages/: TagsPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
frontend/src/test/: setup.ts
frontend/src/types/: tag.ts  task.ts
scripts/: dev.sh  prod.sh
(+4 files in other folders)
